A refactoring suggested by IntelliJ IDEA